plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.10'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.sr'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
	targetCompatibility = '17'
}

repositories {
	mavenCentral()
	maven {
		//url 'https://o2-stage-nexus.kartrocket.in/repository/maven-releases'
		url 'https://sr-o2-nexus.shiprocket.in/repository/maven-releases'
	}
	/*maven {
		url 'https://o2prod-nexus.shiprocket.com/repository/maven-releases'
	}*/

}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {

	//Basic Starter dependencies
	implementation('org.springframework.boot:spring-boot-starter')
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '4.0.9'
	implementation 'org.springframework.security:spring-security-web:6.1.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


	//DATASOURCE CONNECTION CLIENTS
	runtimeOnly 'com.mysql:mysql-connector-j'

	//DATASOURCE MIGRATION
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	//METRICS AND MONITORING
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'


	//COMMON-DEPENDENCIES
	implementation(group: 'com.omunify', name: 'core', version: '0.0.7-v2') {
//		transitive = true
		exclude group: 'org.mockito'
		exclude group: 'org.springframework.boot'
	}
	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.1.5'
	implementation (group: 'com.omunify', name: 'common-logger', version: '0.0.3')
	implementation (group: 'com.omunify', name: 'common-interceptor', version: '1.0.3') {
		exclude group: 'org.projectlombok'
		exclude group: 'org.springframework.boot'
	}
	implementation("com.omunify:restutil:0.0.2-v2")
	implementation('com.omunify:filters:1.0.1')
	implementation('com.omunify:encryption:0.0.6-v3') {
		exclude group: 'org.springframework.boot'
	}

	implementation("com.omunify:kafka-msg-consumer:1.0.5")
	implementation('com.omunify:kafka-msg-publisher:1.0.5')
	implementation("com.omunify:kafka-msg-common:1.0.5")
	implementation('com.omunify:kafka-mysql-adapter:1.0.5')


	//adhoc
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.565'
	implementation platform('software.amazon.awssdk:bom:2.20.56')
	implementation 'software.amazon.awssdk:s3'
	implementation group: 'org.redisson', name: 'redisson', version: '3.23.3'
	implementation 'org.modelmapper:modelmapper:2.4.4'
	implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
	testImplementation 'org.mockito:mockito-core:3.11.2'
	implementation 'com.jayway.jsonpath:json-path:2.8.0'
	implementation 'org.springframework.retry:spring-retry:1.3.4'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'



	//apache
	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
	implementation group: 'com.opencsv', name: 'opencsv', version: '5.8'
	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
	implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
	implementation 'org.apache.pdfbox:pdfbox:2.0.29'


	//shedlock
	implementation 'net.javacrumbs.shedlock:shedlock-spring:4.46.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.46.0'


}

tasks.named('test') {
	useJUnitPlatform()
}
